--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-*
-!parent_module_hard_code_object_property_values/*.tf
+.terraform/
+terraform.*
+.terraform.lock.hcl
+
+
+
+# *
+# !parent_module_hard_code_object_property_values/*.tf
 
 
 
